--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,7 +8,8 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-body {
+.ba {
+
   font-family: "Open Sans", sans-serif;
   color: #444444;
 }
@@ -23,7 +24,7 @@ a:hover {
   text-decoration: none;
 }
 
-h1,
+
 h2,
 h3,
 h4,
