--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -35,7 +35,7 @@
   ======================================================== -->
 </head>
 
-<body>
+<body class="ba">
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
