--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -24,7 +24,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-6 col-lg-4">
 					<div class="login-wrap p-0">
-		      	<h2 class="mb-4 text-center">Connexion</h2>
+		      	<h2 class="mb-4 text-center" style="color:#fff">Connexion</h2>
 		      	<form  method="post">
 				{% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
