--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -64,6 +64,7 @@
           <li><a class="nav-link scrollto" href="#about">Qui sommes-Nous?</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Activités</a></li>
+          <li><a class="nav-link scrollto " href="#portfolio">Conseils</a></li>
           {# <li><a class="nav-link scrollto" href="#team">Team</a></li> #}
           {# <li><a href="blog.html">Blog</a></li> #}
           
