--- a/templates/userprofile/index.html.twig
+++ b/templates/userprofile/index.html.twig
@@ -52,8 +52,8 @@
         <li><a href="{{path('app_main')}}" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Acceuil</span></a></li>
         <li><a href="{{ path('app_userprofile') }}" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Profile</span></a></li>
         
-        <li><a href="{{ path('app_img') }}" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="{{ path('app_demande') }}" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+        <li><a href="{{ path('app_img') }}" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Gallerie</span></a></li>
+        <li><a href="{{ path('app_demande') }}" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Demandes</span></a></li>
         <li><a href="{{ path('app_historique') }}" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Historique</span></a></li>
         <li><a href="{{ path('app_logout') }}" class="nav-link scrollto"><i class=" bx bx-lock-alt"></i> <span>Déconnecter</span></a></li>
       </ul>
