--- a/public/assets/css/historique.css
+++ b/public/assets/css/historique.css
@@ -8305,7 +8305,8 @@ align-items: center; }
     font-size: 13px;
     color: #000;
     font-weight: 400;
-    text-transform: uppercase; }
+    text-transform: uppercase; 
+  text-align: center;}
   .table thead tr {
     background: #fff; }
   .table tbody tr {
@@ -8314,7 +8315,9 @@ align-items: center; }
     border: none;
     padding: 20px 30px;
     font-size: 14px;
-    vertical-align: middle; }
+    vertical-align: middle;
+    text-align: center;
+  text-align: center; }
   .table tbody td .close span {
     font-size: 12px;
     color: #dc3545; }
