--- a/templates/historique/index.html.twig
+++ b/templates/historique/index.html.twig
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>Table 09</title>
+  	<title>historique</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -23,8 +23,8 @@
         <li><a href="{{path('app_main')}}" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Acceuil</span></a></li>
         <li><a href="{{ path('app_userprofile') }}" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Profile</span></a></li>
         
-        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="{{ path('app_demande') }}" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+        <li><a href="{{ path('app_img') }}" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Gallerie</span></a></li>
+        <li><a href="{{ path('app_demande') }}" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Demandes</span></a></li>
         <li><a href="{{ path('app_historique') }}" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Historique</span></a></li>
         <li><a href="{{ path('app_logout') }}" class="nav-link scrollto"><i class=" bx bx-lock-alt"></i> <span>Déconnecter</span></a></li>
       </ul>
@@ -69,7 +69,15 @@
                               <td>{{product.type}}</td>
                               <td>{{product.nombre}}</td>
                               <td>{{product.prix}}</td>
+							  {% if product.statut == "Accepté" %}
+						      <td><a href="#" class="btn btn-success">{{product.statut}}</a></td>
+							  
+							  {% elseif product.statut == "Refusé" %}
+						      <td><a href="#" class="btn btn-danger">{{product.statut}}</a></td>
+							  
+							  {% else %}
 						      <td><a href="#" class="btn btn-warning">En cours</a></td>
+							  {% endif %}
 						    </tr>
                             {% endfor %}
                             
