--- a/templates/userprofile/images.html.twig
+++ b/templates/userprofile/images.html.twig
@@ -166,7 +166,7 @@
           {% endif %}
 
           
-           {% if image.type == "Randonnée" %}
+           {% if image.type == "Randonnées" %}
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="/uploads/personne/{{image.photo}}" class="img-fluid" alt="">
