--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -808,8 +808,10 @@ Les activités de plein air son.</p>
 
         </div>
 
+        <div class="row">
+      <div class="col-lg-12">
         <div class="form">
-          <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+          <form action="{{ path('message_new') }}" method="post" role="form" class="php-email-form">
             <div class="row">
               <div class="col-md-6 form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
@@ -825,15 +827,16 @@ Les activités de plein air son.</p>
               <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
             </div>
             <div class="my-3">
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
+               <div class="loading">Loading</div> 
+               <div class="error-message"></div> 
               <div class="sent-message">Your message has been sent. Thank you!</div>
             </div>
             <div class="text-center"><button type="submit">Send Message</button></div>
           </form>
         </div>
-
       </div>
+    </div>
+  </div>
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
