--- a/public/assets/css/prog.css
+++ b/public/assets/css/prog.css
@@ -2257,7 +2257,7 @@ button {
         .sidebar-section .location-wrapper .location-info-list ul li:last-child {
           margin-bottom: 0px; }
         .sidebar-section .location-wrapper .location-info-list ul li i {
-          color: #ffbe30; }
+          color: #5c9f24; }
   .sidebar-section .location-wrapper .button {
     padding: 30px;
     padding-top: 0px;
