--- a/templates/programme/detail.html.twig
+++ b/templates/programme/detail.html.twig
@@ -868,7 +868,8 @@
 							</div>
 
 							<div class="form-wrapper">
-								<form action="https://jthemes.net/themes/html/harmony-event/contact.php">
+							{# <form action="{{ path('comment_add') }}" method="post" role="form" class="php-email-form"> #}
+								 <form action="https://jthemes.net/themes/html/harmony-event/contact.php"> 
 									<div class="row">
 
 										<!-- form-item - start -->
