--- a/templates/programme/index.html.twig
+++ b/templates/programme/index.html.twig
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 
-		<title>Harmoni - Event Grid</title>
+		<title>Programme</title>
 		<link rel="shortcut icon" href="assets/img/favicon.png">
 
 		<!-- fraimwork - css include -->
